tdf#71603: Improve font fallback on Windows a bit

Check all missing characters, not just the first one. Also the calling
sites for GlyphFallbackFontSubstitution hook expect the OUString to be
updated to have only any characters not supported by the returned font.

Change-Id: Ife56d692c05433f2f7fe02db3ef1562181dc3d53